style.css
/* ... */
a {
    margin:0;
    padding:0;
    font-size:100%;
    vertical-align:baseline;
    background:transparent;
}

/* change colours to suit your needs */
ins {
    background-color:#ff9;
    color:#000;
    text-decoration:none;
}

/* change colours to suit your needs */
mark {
    background-color:#ff9;
    color:#000; 
    font-style:italic;
    font-weight:bold;
}

del {
    text-decoration: line-through;
}

abbr[title], dfn[title] {
    border-bottom:1px dotted;
    cursor:help;
}

table {
    border-collapse:collapse;
    border-spacing:0;
}

/* change border colour to suit your needs */
hr {
    display:block;
    height:1px;
    border:0;   
    border-top:1px solid #cccccc;
    margin:1em 0;
    padding:0;
}

input, select {
    vertical-align:middle;
}

/*My styling*/

#map {
	height: 300px;
	width: 300px
}

#main-about .mobile-signup a{
	position: fixed;
	width: 100px;
	height: 40px;
	text-align: center;
	z-index: 2000;
	bottom: 20px;
	left: 0;
	right: 0;
	margin-right: auto;
	margin-left: auto;
	border-radius: 25px;
	line-height: 37px;
	display: none;
	font-family: 'Noto Serif JP', sans-serif;
	font-weight: bold;
	color: black;
	background-image: linear-gradient(to right, #00cc44 , #99ffbb);
}

.main-wrapper {
	margin: 0 auto;
	width: auto;
}

.main-wrapper ul li{
	float: left;
	margin-right; 5px;
}

a {
	text-decoration: none;
}

body {
	background-color: #184193
}



header nav {
	width: 100%;
	height: 60px;
	background-image: linear-gradient(to right, green , white);
	position: fixed;
	box-shadow: 5px 5px 8px black;
	z-index: 1000;
	position: absolute;
}

header nav ul {
	float: left;
}

header nav ul li {
	float: left;
	list-style: none;
}

header nav ul li a {
	font-family: arial;
	font-size: 16px;
	color: #111;
	line-height: 63px;
}

header .nav-login {
	float: right;
}

header .nav-login form {
	float: left;
	padding-top: 15px;
}

header .nav-login form input {
	float: left;
	width: 140px;
	height: 30px;
	padding: 0px 10px;
	margin-right: 10px;
	border: none;
	font-family: arial;
	font-size: 14px;
	color: #111;
	line-height: 30px;
}

header .nav-login form button {
	float: left;
	width: 60px;
	height: 30px;
	margin-right: 10px;
	border: none;
	background-color: #f3f3f3;
	font-family: arial;
	font-size: 14px;
	color: #111;
	cursor: pointer;
}

header .nav-login form button:hover {
	background-color: #ccc;
}

header .nav-login a {
	display: block;
	padding-right: 8px;
	height: 60px;
	border: none;
	float: left;
	background-color: #DDBD0F;
	font-family: arial;
	font-size: 16px;
	color: #111;
	line-height: 63px;
	cursor: pointer;
}

#loggedoutmain {
	display: flex;
	max-width: 983px;
	margin: 0 auto;
}

.main-container {
	padding-top:70px;
	height: 370px;
	flex: 1;
}

.main-container-text {
	padding: 50px 0;
	padding: 50px;
}

.main-container h2 {
	font-size: 17px;
	color: white;
	line-height: 50px;
	text-align: left;
	font-family: 'Noto Serif JP', sans-serif;
	margin-left: auto;
	margin-right: auto;
}

.main-container img {
	width: 100px;
	height: 100px;
	display: block;
	margin-left: auto;
	margin-right: auto;
}

.main-container h3 {
	font-size: 22px;
	color: white;
	line-height: 50px;
	text-align: left;
	font-family: 'Montserrat', sans-serif;
	margin-left: auto;
	margin-right: auto;
}

#loginorsignup {
	flex: 1;
	padding-top: 70px;
}

#loginorsignup p {
	color: white;
}

#headergreeting {
	display: block;
	float: left;
	padding-right: 10px;
	line-height: 63px;
	font-size: 20px;
	font-family: arial;
}

.benefits {
	padding-top: 70px;
}

/*mobile media query*/

@media (max-width:800px)  { 
	#main-about .mobile-signup a {
		display: block;
	}

	.menu-icon {
		  position: absolute;
		  float: left;
		  width: 20px;
		  height: 14px;
		  margin: auto;
		  top: 0;
		  right: 15px;
		  bottom: 1px;
	}

	.main-wrapper .menu-line{
		
		 background-color: #333;
		 height: 2px;
		 width: 100%;
		 border-radius: 2px;
		 position: absolute; 
		 left: 0;
	}
		
	.main-wrapper .menu-line-1 { 
		top: 0; 
	}

	.main-wrapper .menu-line-2 {
		 top: 0;
		 bottom: 0;
		 margin: auto;
	}

	.main-wrapper .menu-line-3 { 
		bottom: 0; 
	}

	.navlink {
		position: fixed;
		margin-top: 60px;
		width: 100%;
		background-color: white;
		right: -786px;
		-webkit-transition: .5s ease-out;
		-moz-transition: .5s ease-out;
		-o-transition: .5s ease-out;
		-ms-transition: .5s ease-out;
		transition: .5s ease-out;
	}
	
	.navlink-out {
		position: fixed;
		margin-top: 60px;
		width: 100%;
		background-color: white;
		right: 0px;
		-webkit-transition: .5s ease-out;
		-moz-transition: .5s ease-out;
		-o-transition: .5s ease-out;
		-ms-transition: .5s ease-out;
		transition: .5s ease-out;
	}
	
	.navlink ul {
		width: 100%;
		text-align: center;
	}
	
	.navlink li {
		width: 100%;
		border: .5px solid black;
	}
	
	header .nav-login {
		position: fixed;
		margin-top: 250px;
		width: 100%;
		background-color: white;
		border-top: 1px solid black;
		height: 60px;
		float: none;
		right: -786px;
		-webkit-transition: .5s ease-out;
		-moz-transition: .5s ease-out;
		-o-transition: .5s ease-out;
		-ms-transition: .5s ease-out;
		transition: .5s ease-out;
	}
	
	header .nav-login-out {
		right: 0px;
		-webkit-transition: .5s ease-out;
		-moz-transition: .5s ease-out;
		-o-transition: .5s ease-out;
		-ms-transition: .5s ease-out;
		transition: .5s ease-out;
	}
	
	header .nav-login form {
		width: 100%;
		float: none;
		text-align: center;
	}
	
	header .nav-login form input {
		float: none;
	}
	
	header .nav-login form button {
		float: none;
	}
	
	header .nav-login a {
		display: none;
	}
}

@media (max-width:667px)  { 

	.main-container {
		height: 550px;
	}
}

/*Event Page */
#signupeventbutton {
	display: none;
}

#leaveeventbutton {
	display: none;
}

#canceleventbutton {
	display: none;
}

#viewEventMap {
	height: 200px;
	width: 200px;
}

.eventimage {
	display: inline-block;
}

.eventimage img {
	height: 100%;
	max-height: 140px;
	margin: 12px
}
/* ... */

